# kevs

./: .clang-tidy  .gitignore  .golangci.yml  CMakeLists.txt  LICENSE  build.zig  cov-merge.py  cov-show.py  dev.go  example.kevs  fuzz.sh  ghostty.kevs  kevs.c  kevs.go  kevs.h  kevs.py  kevs_cli.c  kevs_example.c  kevs_fuzz.c  kevs_test.c  readme.md  release.sh  run_fuzzer.sh  shell.nix  test.zig  todo  trace.py  trace.sh
examples/: example.kevs  toml.kevs
examples/go/: .gitignore  example.go  go.mod  readme.md
examples/zig/: build.zig  readme.md
examples/zig/src/: main.zig
go/: go.mod  kevs.go  kevs_test.go
python/: kevs  kevs.py
scripts/: cov-merge.py  dev.go  fuzz.sh  tests.go  trace.sh
src/: cli.c  example.c  fuzzer.c  kevs.c  kevs.h  str.h  unittests.c  util.c  util.h
src/c/: cli.c  example.c  fuzzer.c  kevs.c  kevs.h  unittests.c  util.c  util.h
src/go/: kevs.go  kevs_test.go
src/py/: kevs.py
src/python/: kevs
testdata/: comments.kevs  go.mod  simple_values.kevs  table_list_table.kevs  table_one_line.kevs  table_with_comments.kevs
testdata/bugs/: table_kv_missing_semicolon.kevs
testdata/not_valid/: comment_without_newline.out  empty_key.kevs  empty_key.out  empty_list_without_end.out  empty_table_without_end.kevs  empty_table_without_end.out  integer_not_valid.kevs  integer_not_valid.out  key_not_uniq.kevs  key_not_uniq.out  key_not_uniq_nested.kevs  key_not_uniq_nested.out  key_not_valid.kevs  key_not_valid.out  key_not_valid_2.kevs  key_not_valid_2.out  kv_in_middle_of_table_misses_separator.kevs  kv_in_middle_of_table_misses_separator.out  missing_kv_separator.out  missing_multiline_string_end.kevs  missing_raw_string_end.out  missing_semicolon_after_bool.out  missing_semicolon_after_int.out  missing_semicolon_after_list.kevs  missing_semicolon_after_list.out  missing_semicolon_after_raw_string.kevs  missing_semicolon_after_raw_string.out  missing_semicolon_after_string.out  missing_semicolon_after_table.kevs  missing_semicolon_after_table.out  missing_string_end.kevs  missing_string_end.out  raw_string_keeps_line_count.kevs  raw_string_keeps_line_count.out  table_kv_missing_semicolon.out  table_kv_missing_semicolon_2.kevs  table_kv_missing_semicolon_2.out  unicode_code_point_not_hex_U.out  unicode_code_point_not_hex_u.kevs  unicode_code_point_not_hex_u.out  (+17 more)
testdata/valid/: empty_values.kevs  empty_values.out  list_one_line.kevs  list_one_line.out  list_with_comments.kevs  list_with_comments.out  nested.kevs  nested.out  one_line_kv.kevs  one_line_kv.out  raw_string.kevs  raw_string.out  same_key_diff_scope.kevs  same_key_diff_scope.out  simple_values.out  string_with_escaped_quotes.kevs  string_with_escaped_quotes.out  string_with_escapes.kevs  string_with_escapes.out  string_with_unicode.kevs  string_with_unicode.out  table_list_table.out  table_one_line.out  table_with_comments.out
(+2 files in other folders)
